--- a/src/assets/styles/_navigation.scss
+++ b/src/assets/styles/_navigation.scss
@@ -10,4 +10,9 @@ $nav-height: 50px;
   box-shadow: $base-drop-shadow;
   position: relative;
   z-index: 3;
+
+  &-logo {
+    max-height: $nav-height - $base-spacing;
+    padding: 0 $base-spacing;
+  }
 }
